--- a/src/app/components/alumnos/alumnos-form.component.html
+++ b/src/app/components/alumnos/alumnos-form.component.html
@@ -39,6 +39,8 @@
             </button>
             </div>
 
+            <mat-progress-bar mode="indeterminate" *ngIf="progressBar"></mat-progress-bar>
+
         </form>
 
 
