--- a/src/app/components/alumnos/alumnos.component.html
+++ b/src/app/components/alumnos/alumnos.component.html
@@ -12,6 +12,7 @@
                     <th>Apellido</th>
                     <th>Email</th>
                     <th>Fecha Creado</th>
+                    <th>Examenes</th>
                     <th>Editar</th>
                     <th>Eliminar</th>
                 </tr>
@@ -28,6 +29,9 @@
                     <td>{{alumno.email}}</td>
                     <td>{{alumno.createAt | date: 'yyyy/MM/dd'}}</td>
                     <td>
+                        <button class="btn btn-warning btn-sm" [routerLink]="['/alumnos/responder-examen',alumno.id]"><i class="bi-alarm"></i>Responder</button>
+                    </td>
+                    <td>
                         <button class="btn btn-warning btn-sm" [routerLink]="['/alumnos/form',alumno.id]"><i class="bi-alarm"></i>Editar</button>
                     </td>
                     <td>
@@ -43,6 +47,7 @@
         <!--Tabla con paginacion de angular material-->
         <mat-paginator [length]="totalRegistros" [pageSize]="totalPorPagina" [pageIndex]="paginaActual" [pageSizeOptions]="pageSizeOptions" aria-label="Select page" (page)="paginar($event)" showFirstLastButtons class="float-left mx-2">
         </mat-paginator>
+
 
 
     </div>
