--- a/src/app/components/examenes/examenes.component.html
+++ b/src/app/components/examenes/examenes.component.html
@@ -1,1 +1,44 @@
-<p>examenes works!</p>
+<div class="card text-dark bg-light mb-3">
+    <div class="card-header">{{titulo}}</div>
+    <div class="card-body">
+        <button class="btn btn-primary my-2" routerLink="/examenes/form">Registrar</button>
+        <div class="alert alert-info" *ngIf="lista.length==0">No hay examenes en el sistema</div>
+        <table class="table  table-hover table-striped " *ngIf="lista.length>0">
+            <thead>
+                <tr>
+                    <th>id</th>
+                    <th>Nombre</th>
+                    <th>Asignatura</th>
+                    <th>Preguntas</th>
+                    <th>Fecha Creado</th>
+                    <th>Editar</th>
+                    <th>Eliminar</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let examen of lista ">
+                    <td>{{examen.id}}</td>
+                    <td>{{examen.nombre | uppercase}}</td>
+                    <td>{{examen.asignaturaPadre!.nombre}} -> {{examen.asignaturaHija!.nombre}}</td>
+                    <td>{{examen.preguntas.length}}</td>
+                    <td>{{examen.createAt | date: 'yyyy/MM/dd'}}</td>
+                    <td>
+                        <button class="btn btn-warning btn-sm" [routerLink]="['/examenes/form',examen.id]"><i class="bi-alarm"></i>Editar</button>
+                    </td>
+                    <td>
+                        <button class="btn btn-danger btn-sm" (click)="eliminar(examen)">Eliminar</button>
+                    </td>
+                </tr>
+
+            </tbody>
+
+        </table>
+
+
+        <!--Tabla con paginacion de angular material-->
+        <mat-paginator [length]="totalRegistros" [pageSize]="totalPorPagina" [pageIndex]="paginaActual" [pageSizeOptions]="pageSizeOptions" aria-label="Select page" (page)="paginar($event)" showFirstLastButtons class="float-left mx-2">
+        </mat-paginator>
+
+
+    </div>
+</div>
